SSB-187: Fixed checkbox alignment for macbook

--- a/app/design/frontend/Alfakher/globalhookah/Magento_Customer/web/css/source/_extend.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Customer/web/css/source/_extend.less
@@ -50,6 +50,12 @@
             }
         }
 
+        .field.choice.newsletter {
+            label {
+                display: flex;
+            }
+        }
+
         .fieldset > .field:not(.choice) {
             margin-bottom: 2.9rem;
         }
